@@ -14,14 +14,14 @@ MD5 74b73dc3b5dffde70424a19d6f477a83 files/calc-2.02f-info-dir.patch 301
 RMD160 56a619a319f036ccbbc5fc8f21a8380b807cf68e files/calc-2.02f-info-dir.patch 301
 SHA256 cac6ee1a91324f2001c1d991bb7b9bba24ae6eae36ee554fbbc9e252fdbabbaf files/calc-2.02f-info-dir.patch 301
 DIST calc-2.02f.tar.gz 831865 RMD160 4ca65723de4a5c3f8ebb3c61191185b48ddb1009 SHA1 1a1d54fb90725aacaf1c9308a94be4b813ac4880 SHA256 774231cdf06999d3a7cbfae69a1afe469497a6bc7d2e6cb90de922dd3ae5e67d
-EBUILD calc-2.02f.ebuild 1330 RMD160 27879e82ec5d4f03671b3514e5dbf00d84408c4b SHA1 d2d55ba50e4d16cf3c376432cb6819c7d3b7c29d SHA256 d2f27a6e271e1bbb45f5705d48a6771f85f263894545eee9eddcc8322a8eac92
-MD5 ae897fb47f1bd47d9c30847850fe010d calc-2.02f.ebuild 1330
-RMD160 27879e82ec5d4f03671b3514e5dbf00d84408c4b calc-2.02f.ebuild 1330
-SHA256 d2f27a6e271e1bbb45f5705d48a6771f85f263894545eee9eddcc8322a8eac92 calc-2.02f.ebuild 1330
-MISC ChangeLog 1149 RMD160 1ff7cc755fee7304ccec47c5c85b9c81ff16ac58 SHA1 2a6e0830b583b4404b4edf0972f989bda42f5878 SHA256 889d4f3b1e71524cb453fea56da49a428ac9fde4e332c521eff6e4657b0542fe
-MD5 a510a232a98c93eb50072e0f3208f918 ChangeLog 1149
-RMD160 1ff7cc755fee7304ccec47c5c85b9c81ff16ac58 ChangeLog 1149
-SHA256 889d4f3b1e71524cb453fea56da49a428ac9fde4e332c521eff6e4657b0542fe ChangeLog 1149
+EBUILD calc-2.02f.ebuild 1306 RMD160 32235a3c42473d5feedbe8cd72975b197f551451 SHA1 7be6aa5b95cb6be7da7487fceee9466c0b1f3555 SHA256 f9beb19778dcb0030bbed696c679b245ebc994cfa47ed19b455ef502b79f48a3
+MD5 c41ee1817c0d99359afaadaa59aa7e1e calc-2.02f.ebuild 1306
+RMD160 32235a3c42473d5feedbe8cd72975b197f551451 calc-2.02f.ebuild 1306
+SHA256 f9beb19778dcb0030bbed696c679b245ebc994cfa47ed19b455ef502b79f48a3 calc-2.02f.ebuild 1306
+MISC ChangeLog 1283 RMD160 916676df937ea8dcb26b6cd7a2a2f6305e0cc69a SHA1 3b396975d90d9c15388545c57cf7bc0e535f205c SHA256 753816b2ca6d92fba73a950ad99787030f0f3bdca522897297e6ec8c659fe2d9
+MD5 311512700769d99d51c145fbf4f609e7 ChangeLog 1283
+RMD160 916676df937ea8dcb26b6cd7a2a2f6305e0cc69a ChangeLog 1283
+SHA256 753816b2ca6d92fba73a950ad99787030f0f3bdca522897297e6ec8c659fe2d9 ChangeLog 1283
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
@@ -32,7 +32,7 @@ SHA256 35229710c01ffb4714853ed35d29eed785f41c37f1c413cf753ddbcba864b505 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFHIxh7NQqtfCuFneMRAucGAJ9GVi52qV1dMFE67nhBwDpxg+mnSQCdE044
-XBAwlJiDJYju1vXGx/iIyFk=
-=MkwL
+iD8DBQFHULLFOeoy/oIi7uwRAgkiAJ48/TnYOKxI1Nvyt1vfEYR2znnVpwCffmIc
+tti7UxonHoZ+xBXKIwy6D0w=
+=Qdsv
 -----END PGP SIGNATURE-----
