@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/calc
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.5 2007/10/27 10:52:37 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.6 2007/12/01 01:02:34 ulm Exp $
+
+  30 Nov 2007; Ulrich Mueller <ulm@gentoo.org> calc-2.02f.ebuild:
+  Move message to pkg_setup, so that it is also seen if build fails.
 
   27 Oct 2007; Christian Faulhammer <opfer@gentoo.org> calc-2.02f.ebuild:
   stable x86, bug 197184
